--- a/DashBoard.Web/Views/Shared/_SearchPanel.cshtml
+++ b/DashBoard.Web/Views/Shared/_SearchPanel.cshtml
@@ -1,22 +1,16 @@
 ﻿<div class="modal" id="searchPanel" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog animated bounceInDown">
         <div class="modal-content">
-            <div class="modal-header">
+            @*<div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title">Data Filter</h4>
 
-            </div>
-            <div class="modal-body">
+            </div>*@
+            <div class="modal-body" style="">
                 @Html.Label("Search By University")
-                @Html.DropDownList("drpsearch", new SelectList(new List<SelectListItem>
-                       {
-                           new SelectListItem {  Text = "ALBaha University", Value = "ALBaha University"},
-                           new SelectListItem {  Text = "DAMMAM University", Value = "DAMMAM University"},
-                           new SelectListItem {  Text = "Jazan University", Value = "Jazan University"},
-                           new SelectListItem {  Text = "King Abdulaziz University", Value = "King Abdulaziz University"},
-                       }, "Value", "Text"), new { @multiple = "multiple", @style = "width:450px" })
+                @Html.DropDownList("drpsearch", (SelectList)@ViewData["filter"], new { @multiple = "multiple", @style = "width:450px" })
             </div>
-            <div class="modal-footer">
+            @*<div class="modal-footer">
                 <button data-dismiss="modal" class="btn btn-default" type="button">Close</button>
                 <span class="btn btn-info">
                     @Ajax.ActionLink("Search", "search", new { criteria = "value" }, new AjaxOptions {
@@ -27,8 +21,8 @@
                    OnFailure = ""
                },new { @id="searchBtn"})
                 </span>
-                @*<button id="searchbtn" class="btn btn-info" type="button">Search</button>*@
-            </div>
+               
+            </div>*@
         </div>
     </div>
 </div>
