--- a/UniversitiesDashBoardDemo/Views/Shared/_SearchPanel.cshtml
+++ b/UniversitiesDashBoardDemo/Views/Shared/_SearchPanel.cshtml
@@ -1,5 +1,5 @@
-﻿<div class="modal" id="searchPanel" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog animated bounceInDown">
+﻿<div class="modal" id="searchPanel" tabindex="-1" role="dialog" aria-hidden="true" style="background:rgba(0,0,0,0.7)!important">
+    <div class="modal-dialog animated bounceInDown" style="opacity: 0.5">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
